tests/sksl/errors/golden/TernaryMismatch.glsl
### Compilation failed:

error: 1: ternary operator result mismatch: 'bool', 'float'
error: 2: ternary operator result mismatch: 'float3', 'float'
2 errors
